# FULL-FASTAPI

./: README.md
fast_api_1/: main.py  pyproject.toml
fast_api_2/: main.py
fast_api_3/: main.py
fast_api_4/: blog.db  pyproject.toml  schemas.py
fast_api_5/: blog.db
fast_api_7/: pyproject.toml
fast_api_9/: blog.db
