[project]
name = "fast-api-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.139.0",
    "greenlet>=3.5.3",
    "jinja2>=3.1.6",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.50.0",
]
